	PR debug/9963 	* config/i386/cygming.h (ASM_OUTPUT_EXTERNAL): Pass DECL to 	i386_pe_record_external_function. 	(i386_pe_record_external_function): Update declaration. 	* config/i386/winnt.c (struct extern_list): Add decl field. 	(i386_pe_record_external_function): Add decl parameter. 	(i386_pe_file_end): Check TREE_ASM_WRITTEN on decl, not 	identifier. 	* config/i386/i386-protos.h (i386_pe_record_external_function): 	Update declaration.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97602 138bc75d-0d04-0410-961f-82ee72b054a4